# kernel

./: .gitignore  Cargo.toml  LICENSE  Makefile  build.rs  idle.b  loop.b  pass.txt  pool_test.b
.cargo/: config.toml
.github/workflows/: checkout.yml  rust.yml
asm/exception/: exception_entry.S  handlers.S  trapframe.S
asm/init/: entry.S
asm/mm/: tlb.S
asm/pm/: env_asm.S
mos_exec/: icode.b  serv.b  testpipe.b  testpiperace.b  testptelibrary.b
scripts/: asm_replace.py  run_bg.sh
src/: bitops.rs  console.rs  error.rs  export.rs  kernel.ld  logging.rs  macros.rs  main.rs  mutex.rs  panic.rs
src/exception/: clock.rs  exception_entry.S  handler.rs  handlers.S  handlers.rs  mod.rs  trapframe.S  trapframe.rs
src/init/: entry.S
src/mips/: gpr.rs  mod.rs  reg.rs
src/mips/cp0/: badvaddr.rs  cause.rs  compare.rs  count.rs  cp0reg.rs  ebase.rs  entryhi.rs  entrylo.rs  epc.rs  general.rs  index.rs  mod.rs  random.rs  status.rs
src/mm/: addr.rs  heap.rs  layout.rs  map.rs  mod.rs  page.rs  tlb.S  tlb.rs
src/platform/: gpr.rs  machine.rs  malta.rs  mod.rs
src/platform/mips/: cp0reg.rs  machine.rs  reg.rs
src/platform/qemu/: lib.rs  machine.rs  malta.rs  mod.rs
src/pm/: elf.rs  env.rs  env_asm.S  ipc.rs  mod.rs  schedule.rs  tools.rs  trap.rs
src/syscall/: handlers.rs  mempool.rs  mod.rs
src/test/: dispatcher.rs  env.rs  heap.rs  map.rs  mod.rs  tlb.rs
