[package]
name = "kernel"
version = "0.0.1"
authors = ["Qin-Shihuang <0.0@owo.li>", "FyVoid <mythstudiofyvoid@outlook.com>"]
edition = "2021"

[dependencies]
allocator = { version = "0.1.0", path = "../allocator" }
spinning_top = "0.3.0"

[build-dependencies]
preprocessor = { version = "0.1.0", path = "../tools/preprocessor" }

[features]
