[package]
name = "kernel"
version = "0.0.1"
authors = ["Qin-Shihuang <0.0@owo.li>", "FyVoid <mythstudiofyvoid@outlook.com>"]
edition = "2021"

[dependencies]
allocator = { version = "0.1.0", path = "../allocator" }
bitflags = "2.5.0"
lazy_static = { version = "1", features = ["spin_no_std"] }
log = "0.4"
spin = "0"

[build-dependencies]
preprocessor = { version = "0.1.0", path = "../tools/preprocessor" }

[features]
